fixed images too close to text

--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,3 +1,7 @@
 .menu-highlight {
   background-color: red;
 }
+
+.mr-3 {
+  margin-right: 1rem !important;
+}
